# meetingroom-bot

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  TODO.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
docs/: RAILWAY_DEPLOYMENT.md  SLACK_SETUP.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
scripts/: init_db.py
src/: api.py  app.py  main.py
src/handlers/: message_handler.py
src/models/: database.py
src/services/: reservation_service.py
src/utils/: nlp_parser.py
